--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercice Todo List Javascript</title>
     <script src="/index.js" defer></script>
+    <link rel="stylesheet" href="/main.css">
 </head>
 <body>
-    <h1>Test</h1>
+    <div class="heading">
+        <h1>Todo List</h1>
+        <div class="flex">
+            <input id="textInput" type="text" placeholder="Ajouter une tâche">
+            <button id="add">+</button>
+        </div>
+    </div>
+    <ul id="list">
+    </ul>
 </body>
 </html>
